# ramulator2

./: .clang-format  .gitignore  CMakeLists.txt  external.cmake  format_all.sh
resources/gem5_wrappers/: ramulator2.cc
src/: CMakeLists.txt  main.cpp  register_all.h
src/addr_mapper/: CMakeLists.txt  addr_mapper.h  register_addr_mapper.h
src/addr_mapper/impl/: linear_mappers.cpp  linear_mappers.h  rit.cpp  rit.h
src/base/: CMakeLists.txt  base.h  clocked.h  config.cpp  config.h  debug.h  exception.h  factory.cpp  factory.h  logging.cpp  logging.h  param.h  request.cpp  request.h  serialization.h  stats.cpp  stats.h  type.h  utils.cpp  utils.h
src/dram/: CMakeLists.txt  dram.h  lambdas.h  node.h  register_dram.h  spec.h
src/dram/impl/: DDR3.cpp  DDR3.hpp  DDR4-RVRR.cpp  DDR4-RVRR.hpp  DDR4-VRR.cpp  DDR4-VRR.hpp  DDR4.cpp  DDR4.hpp  DDR5-RVRR.cpp  DDR5-RVRR.hpp  DDR5-VRR.cpp  DDR5-VRR.hpp  DDR5.cpp  DDR5.hpp  GDDR6.cpp  GDDR6.hpp  HBM.cpp  HBM.hpp  HBM2.cpp  HBM2.hpp  HBM3.cpp  HBM3.hpp  LPDDR5.cpp  LPDDR5.hpp
src/dram/lambdas/: action.h  power.h  preq.h  rowhit.h  rowopen.h
src/dram_controller/: CMakeLists.txt  bh_controller.h  bh_scheduler.h  controller.h  plugin.h  refresh.h  register_controller.h  rowpolicy.h  scheduler.h
src/dram_controller/impl/: bh_dram_controller.cpp  bh_dram_controller.h  dummy_controller.cpp  dummy_controller.h  generic_dram_controller.cpp  generic_dram_controller.h  prac_dram_controller.cpp  prac_dram_controller.h
src/dram_controller/impl/plugin/: aqua.cpp  aqua.hpp  cmd_counter.cpp  cmd_counter.hpp  graphene.cpp  graphene.hpp  hydra.cpp  hydra.hpp  oracle_rh.cpp  oracle_rh.hpp  para.cpp  para.hpp  rfm_manager.cpp  rfm_manager.hpp  rrs.cpp  rrs.hpp  trace_recorder.cpp  trace_recorder.hpp  trr.cpp  trr.hpp  twice.cpp  twice.hpp
src/dram_controller/impl/plugin/bliss/: bliss.cpp  bliss.h  bliss.hpp
src/dram_controller/impl/plugin/blockhammer/: blockhammer.cpp  blockhammer.h  blockhammer_throttler.h  blockhammer_util.h
src/dram_controller/impl/plugin/device_config/: device_config.cpp  device_config.h
src/dram_controller/impl/plugin/prac/: prac.cpp  prac.h  prac.hpp
src/dram_controller/impl/refresh/: all_bank_refresh.cpp  all_bank_refresh.h
src/dram_controller/impl/rowpolicy/: basic_rowpolicies.cpp  basic_rowpolicies.h
src/dram_controller/impl/scheduler/: bh_scheduler.cpp  bh_scheduler.h  bliss_scheduler.cpp  bliss_scheduler.h  blocking_scheduler.cpp  blocking_scheduler.h  generic_scheduler.cpp  generic_scheduler.h  prac_scheduler.cpp  prac_scheduler.h
src/example/: CMakeLists.txt  example_ifce.h
src/example/impl/: another_impl.cpp  complicated_impl.cpp  complicated_impl.h  example_impl.cpp  example_serialization.cpp  yetanother_impl.cpp
src/frontend/: CMakeLists.txt  frontend.h  register_frontend.h
src/frontend/impl/external_wrapper/: gem5_frontend.cpp
src/frontend/impl/memory_trace/: loadstore_trace.cpp  readwrite_trace.cpp
src/frontend/impl/processor/bhO3/: bhO3.cpp  bhO3.h  bhcore.cpp  bhcore.h  bhllc.cpp  bhllc.h
src/frontend/impl/processor/simpleO3/: core.cpp  core.h  llc.cpp  llc.h  simpleO3.cpp  simpleO3.h  trace.cpp  trace.h
src/memory_system/: CMakeLists.txt  bh_memory_system.h  memory_system.h  register_memory_system.h
src/memory_system/impl/: bh_DRAM_system.cpp  bh_DRAM_system.h  dummy_memory_system.cpp  dummy_memory_system.h  generic_DRAM_system.cpp  generic_DRAM_system.h
src/test/: test_impl.cpp
src/translation/: CMakeLists.txt  register_translation.h  translation.h
src/translation/impl/: no_translation.cpp  no_translation.h  random_translation.cpp  random_translation.h
test/: CMakeLists.txt  test_ifce.h  test_impl.cpp
